feature(): add chain wallet swagger api
